# ragtime

./: Cargo.toml  Makefile  README.md  rag.md
.github/workflows/: ci.yml  rust.yml
common/: Cargo.toml
common/src/: embeddings.rs  lib.rs  vectordb.rs
lambda_stuff/: Cargo.toml  Makefile  README.md
lambda_stuff/src/: bedrock.rs  http_handler.rs  main.rs
vectordb_stuff/: Cargo.toml  Makefile  README.md
vectordb_stuff/src/: cli.rs  embeddings.rs  main.rs  pdftools.rs  vectordb.rs
