[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
aws-sdk-s3 = { version = "1.76.0", features = ["behavior-version-latest"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde_json = "1.0.138"
tokio = { version = "1", features = ["full", "macros"] }
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
