[package]
name = "lambda_stuff"
version = "0.1.0"
edition = "2021"


[dependencies]
aws-sdk-bedrockruntime = { version = "1.74.0", features = [
    "behavior-version-latest",
] }
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
chrono = { version = "0.4.39", features = ["serde"] }
lambda_http = "0.13.0"
lambda_runtime = { version = "0.13.0", features = ["anyhow"] }
serde_json = "1.0.138"
serde = "1.0.217"
tokio = { version = "1", features = ["full", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
aws-smithy-types = "1.2.13"
anyhow = "1.0.95"
rusqlite = { version = "0.33.0", features = ["bundled"] }
clap = { version = "4.5.30", features = ["derive"] }
pdf-extract = "0.8.2"
regex = "1.11.1"
aws-sdk-s3 = { version = "1.76.0", features = ["behavior-version-latest"] }


